--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+footer{
+    width: 100%;
+    bottom: 0;
+    height: 50px;
+    position: fixed;
+}
+#trans{
+    transition: 1s ease-in-out;
+
+}
+
+
+#trans:hover{
+    transform: scale(1.05);
+
+
+}
