--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,21 @@
 <div class="row">
-    <div class="col-6">
+    <div class="col-6 mt-5" style="width: 50%;">
+            <div class="d-grid gap-2 container mt-5" style="width: 30%;">
+                <button class="btn btn-success" type="button"><i class="fa-solid fa-user"></i> PROFILE VIEW</button>
+                <button class="btn btn-success" type="button"><i class="fa-solid fa-person-circle-check"></i> BALANCE CHECK</button>
+                <button class="btn btn-success" type="button"><i class="fa-solid fa-arrow-right-arrow-left"></i> MONEY TRANSFER</button>
+                <button class="btn btn-success" type="button"><i class="fa-solid fa-file-invoice-dollar"></i> ACCOUNT STATEMENT</button>
+     </div>
+     <div class="d-grid gap-2 container mt-3" style="width: 20%;">
+        <button class="btn btn-danger" type="button"><i class="fa-solid fa-person-circle-minus"></i> DELETE ACCOUNT</button>
+        <!-- <button class="btn btn-primary" type="button"><i class="fa-solid fa-right-from-bracket"></i> LOGOUT</button> -->
+     </div> 
+     <div class="d-grid gap-2 container mt-2" style="width: 15%;">
+        <!-- <button class="btn btn-danger" type="button"><i class="fa-solid fa-person-circle-minus"></i> DELETE ACCOUNT</button> -->
+        <button class="btn btn-primary" type="button"><i class="fa-solid fa-right-from-bracket"></i> LOGOUT</button>
+     </div> 
+
+    
 
     </div>
     <div class="col-6 mt-3">
