--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,20 @@
 <div class="row">
     <div class="col-6 mt-5" style="width: 50%;">
-            <div class="d-grid gap-2 container mt-5" style="width: 30%;">
-                <button class="btn btn-success" type="button"><i class="fa-solid fa-user"></i> PROFILE VIEW</button>
-                <button class="btn btn-success" type="button"><i class="fa-solid fa-person-circle-check"></i> BALANCE CHECK</button>
-                <button class="btn btn-success" type="button"><i class="fa-solid fa-arrow-right-arrow-left"></i> MONEY TRANSFER</button>
-                <button class="btn btn-success" type="button"><i class="fa-solid fa-file-invoice-dollar"></i> ACCOUNT STATEMENT</button>
-     </div>
-     <div class="d-grid gap-2 container mt-3" style="width: 20%;">
-        <button class="btn btn-danger" type="button"><i class="fa-solid fa-person-circle-minus"></i> DELETE ACCOUNT</button>
-        <!-- <button class="btn btn-primary" type="button"><i class="fa-solid fa-right-from-bracket"></i> LOGOUT</button> -->
-     </div> 
-     <div class="d-grid gap-2 container mt-2" style="width: 15%;">
-        <!-- <button class="btn btn-danger" type="button"><i class="fa-solid fa-person-circle-minus"></i> DELETE ACCOUNT</button> -->
-        <button class="btn btn-primary" type="button"><i class="fa-solid fa-right-from-bracket"></i> LOGOUT</button>
-     </div> 
-
+                <div class="d-grid gap-2 container mt-5" style="width: 30%;">
+                    <button class="btn btn-success" type="button">PROFILE VIEW <i class="fa-solid fa-user"></i></button>
+                    <button class="btn btn-success" type="button">BALANCE CHECK <i class="fa-solid fa-person-circle-check"></i> </button>
+                    <button class="btn btn-success" type="button">MONEY TRANSFER <i class="fa-solid fa-arrow-right-arrow-left"></i> </button>
+                    <button class="btn btn-success" type="button">ACC-STATEMENT <i class="fa-solid fa-file-invoice-dollar"></i></button>
+         </div>
+         <div class="d-grid gap-2 container mt-3" style="width: 30%;">
+            <button class="btn btn-danger" type="button">DELETE ACCOUNT <i class="fa-solid fa-person-circle-minus"></i> </button>
+            <!-- <button class="btn btn-primary" type="button"><i class="fa-solid fa-right-from-bracket"></i> LOGOUT</button> -->
+         </div> 
+         <div class="d-grid gap-2 container mt-2" style="width: 30%;">
+            <!-- <button class="btn btn-danger" type="button"><i class="fa-solid fa-person-circle-minus"></i> DELETE ACCOUNT</button> -->
+            <button class="btn btn-primary" type="button">LOGOUT <i class="fa-solid fa-right-from-bracket"></i> </button>
+         </div> 
+    
     
 
     </div>
