--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,26 +6,26 @@
 
             </div>
 
-        <div class="text-center p-2 mt-1 ">
+        <div class="text-center p-2">
             <img src="https://i.postimg.cc/Z5m31kSB/woman-login-into-banking-app-5194430-4341049.png" alt="" class="img1">
 
         </div>
 
-        <div class="p-2 mt-1">
+        <div class="p-2">
             <label for="">ACCOUNT NUMBER</label>
-            <input type="text" (change)="acnochange($event)" class="form-control" [placeholder]="pldata">
+            <input type="text"  id="ac1" [(ngModel)]="acno" class="form-control" name="inputv1" placeholder="enter username">
         </div>
-        <div class="p-2 mt-1">
+        <div class="p-2">
             <label for="">PASSWORD</label>
 
-            <input #psw type="password" class="form-control" placeholder=" enter password">
+            <input  type="password" [(ngModel)]="passw" id="ps1" class="form-control" name="inputv2" placeholder=" enter password">
         </div>
-        <div class="p-2 mt-1 text-center">
+        <div class="p-2 text-center">
             <!-- <button class="text-white bg-success  loginbut">LOGIN</button> -->
-            <button (click)="login(psw)" type="button" class="btn btn-success">LOGIN</button>
+            <button (click)="login()" type="submit" class="btn btn-success">LOGIN</button>
 
         </div>
-        <div class="text-center p-2 mt-1">
+        <div class="text-center p-2">
 
             <a class="text-center text-white mt-2" href="register">create account ?</a>
             <!-- router-link -->
