--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -10,12 +10,12 @@
             jpg
         </div>
         <div class="p-2 mt-1">
-            <input [(ngModel)]="accno" type="text" id="input1" name="inputvalue" class="form-control" placeholder="enter your name">
+            <input [(ngModel)]="uname" type="text" id="input1" name="inputvalue" class="form-control" placeholder="enter your name">
         </div>
 
 
         <div class="p-2 mt-1">
-            <input [(ngModel)]="uname" type="text" id="input2" name="inputvalue2" class="form-control" placeholder="enter account no">
+            <input [(ngModel)]="accno" type="text" id="input2" name="inputvalue2" class="form-control" placeholder="enter account no">
         </div>
         <div class="p-2 mt-1">
 
@@ -28,7 +28,7 @@
 
         <div class="p-2 mt-1 text-center">
             <!-- <button class="text-white bg-success  loginbut">REGISTER</button> -->
-            <button type="submit" (click)="register()" class="btn btn-success">REGISTER</button>
+            <button type="submit" (click)="signup()"  class="btn btn-success">REGISTER</button>
 
         </div>
 
